main.css
/* ADD YOUR STYLES HERE */
.horizontal div{
	position: relative;
	text-align: center;
	display: inline-block;

	
}
.horizontal img{
	padding: 0px 20px;
	vertical-align: top;
}
.horizontal p{
	display: inline-block;
	vertical-align: top;
	
}
.horizontal ol{
	display: inline-block;
	vertical-align: top;

}
.horizontal ul{
	display: inline-block;
	vertical-align: top;

}

.vertical div{
	
	padding: 100px 2px 100px 2px;	
	text-align: left;
}

.sidelist li{
	list-style: none;
	float:left;
	
}
.button{
	text-align: center;
	text-decoration: none;
	border-style: none;
	color: white;
	display: inline-block;
	background-color: #e6848a;
	width: 162px;
	height: 38px;
	border-radius: 8px;
	line-height: 38px;
	vertical-align: middle;
}

#big{
	font-size: 150%;
	width: 216px;
	height: 69px;
	line-height: 69px;
}
#small{
	font-size: 75%;
	width: 35px;
	height: 25px;
	line-height: 25px;
}
nav{
	background-color: #e6848a;
	text-align: center;
	border-radius: 8px;
	width: 100%;

}
nav ul{
	padding: 0px;
}
nav li{
	list-style: none;
	display: inline-block;
	padding: 15px 5%;

	border-radius: 15px;
	background-color: #e6848a;

}
nav a {
	color: white;
	text-decoration: none;
}
nav li:hover{
	background-color: gray;
}
ol.page{
	height: 25px;
}
.page li{ 
	list-style: none;
	display: inline-block;
	text-decoration: none;
	padding: 0px 10px;

}


.page a{
	display: inline-block;
	text-align: center;
	width: 20px;
	text-decoration: none;
	color: #e6848a;
	border-bottom: 3px solid #e6848a;
}
.page span{
	color: gray;
}
a.pagenav{
	border-bottom: none;
	
}
.comment div{
	float:left;
}
.comment img{
	clear: left;
}
.comment time{
	color: gray;
	font-size: 80%;
}
.comment p{
	float: right;
}

